Fix constructing a QSharedPointer<const> of a QEnableSharedFromThis type

It should compile, since the std::shared_ptr does.

[ChangeLog][QtCore][QSharedPointer] Fixed a problem that would cause a
compilation error when constructing a QSharedPointer of a const type
when the type derives from QEnableSharedFromThis.

Task-number: QTBUG-49748
Change-Id: I8de47ed6c7be4847b99bffff141c84f5e0b6bea8
Reviewed-by: Olivier Goffart (Woboq GmbH) <ogoffart@woboq.com>

cregit: 401507b348936d346cec8734cac5cacad70a3174 https://github.com/qt/qtbase/commit/401507b348936d346cec8734cac5cacad70a3174